# LLMAgent

./: README.md  pyproject.toml
LLMAgent/: AgentLlama.py  AgentLlama_Llama3_Instruct.jinja  IAgent.py  ToolRegistry.py  __init__.py
tests/: test_agent_llama.py  test_tool_registry.py
